# UW-RMQ

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
include/: error.hpp
src/: main.cpp
